[tool.poetry]
name = "data_feed"
version = "0.0.0"
description = "Data feed to request medical journals from PubMed API."
authors = ["Noah Horsley <nphorsley59@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipython = "8.26.0"
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
